--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
 
       - uses: aiken-lang/setup-aiken@v0.1.0
         with:
-          version: v1.1.4
+          version: v1.1.4+79d0e45
 
       - run: aiken fmt --check
       - run: aiken check -D
